Client: Don't assume windows have surfaces in QWaylandInputContext::update

Fixes: QTBUG-72751
Change-Id: I6018a34d4a4cfcbdef5d6cd05d2d4ef12846efea
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>